--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "start": "node 030102.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
